--- a/app/src/main/res/layout/activity_act_register.xml
+++ b/app/src/main/res/layout/activity_act_register.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:layout_gravity="center"
-    tools:context=".ActRegister">
+    tools:context=".actvitiy.ActRegister">
 
     <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/regName"
