--- a/app/src/main/res/layout/activity_act_splash.xml
+++ b/app/src/main/res/layout/activity_act_splash.xml
@@ -5,6 +5,6 @@
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:background="@drawable/splash_ovin"
-    tools:context=".ActSplash">
+    tools:context=".actvitiy.ActSplash">
 
 </androidx.constraintlayout.widget.ConstraintLayout>
